<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_home"
        android:orientation="vertical">

        <include layout="@layout/layout_my_head" />

        <include layout="@layout/layout_my_middle" />

        <com.ylean.cf_hospitalapp.widget.GridViewForScrollView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:horizontalSpacing="@dimen/x7"
            android:listSelector="@android:color/transparent"
            android:numColumns="4"
            android:padding="@dimen/x13"
            android:scrollbars="none"
            android:verticalSpacing="@dimen/x7" />

        <com.ylean.cf_hospitalapp.widget.MyItemView
            android:id="@+id/mivHelp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:layout_marginTop="@dimen/x10"
            android:background="@android:color/white"
            custom:ileftImage="@mipmap/ic_my_help"
            custom:itextColor="@color/txt_color_ma3"
            custom:itextSize="@dimen/textsize_18sp"
            custom:itxt="@string/help" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:background="@color/line_colore5" />

        <com.ylean.cf_hospitalapp.widget.MyItemView
            android:id="@+id/mivRecommadFriend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:background="@android:color/white"
            custom:ileftImage="@mipmap/ic_my_friend"
            custom:itextColor="@color/txt_color_ma3"
            custom:itextSize="@dimen/textsize_18sp"
            custom:itxt="@string/recomd_friend" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:background="@color/line_colore5" />

        <com.ylean.cf_hospitalapp.widget.MyItemView
            android:id="@+id/mivCustomer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:background="@android:color/white"
            custom:ileftImage="@mipmap/ic_my_customer"
            custom:itextColor="@color/txt_color_ma3"
            custom:itextSize="@dimen/textsize_18sp"
            custom:itxt="@string/contact_custom" />

        <com.ylean.cf_hospitalapp.widget.MyItemView
            android:id="@+id/mivCustomerTel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:background="@android:color/white"
            custom:ileftImage="@mipmap/ic_my_tel"
            custom:itextColor="@color/txt_color_ma3"
            custom:itextSize="@dimen/textsize_18sp"
            custom:itxt="@string/my_tel" />

    </LinearLayout>


</ScrollView>