<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:background="@android:color/white"
        android:paddingRight="@dimen/x15">

        <ImageView
            android:id="@+id/iv_left"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/x40"
            android:gravity="center"
            android:minWidth="@dimen/x40"
            android:minHeight="@dimen/x40"
            android:padding="@dimen/x10"
            android:src="@mipmap/ic_arrow_left" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:width="@dimen/x178"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/eivSex"
            android:textColor="@color/tab_colorf9"
            android:textSize="@dimen/textsize_18sp" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="@dimen/x44"
            android:layout_height="@dimen/x44"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/tab_colorf9"
            android:textSize="@dimen/textsize_15sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_colore5" />

    <RelativeLayout
        android:id="@+id/rl_meal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tv_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x13"
            android:gravity="center_vertical"
            android:text="@string/male"
            android:textColor="@color/txt_color_ma3"
            android:textSize="@dimen/textsize_15sp" />

        <ImageView
            android:id="@+id/iv_male"
            android:layout_width="@dimen/x44"
            android:layout_height="@dimen/x44"
            android:layout_alignParentRight="true"
            android:padding="@dimen/x13"
            android:src="@mipmap/ic_choosed" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_colore5" />

    <RelativeLayout
        android:id="@+id/rl_femal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tv_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x13"
            android:layout_marginRight="@dimen/x9"
            android:gravity="center_vertical"
            android:text="@string/female"
            android:textColor="@color/txt_color_ma3"
            android:textSize="@dimen/textsize_15sp" />

        <ImageView
            android:id="@+id/iv_femal"
            android:layout_width="@dimen/x44"
            android:layout_height="@dimen/x44"
            android:layout_alignParentRight="true"
            android:padding="@dimen/x13"
            android:src="@mipmap/ic_choosed" />

    </RelativeLayout>


</LinearLayout>