<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/x60"
    android:layout_below="@id/ivLine"
    android:layout_marginTop="@dimen/x8"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/llUseable"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsbableIntegral"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="bottom"
            android:paddingBottom="@dimen/x5"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/usable_integral"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llTotal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTotalIntegral"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="bottom"
            android:paddingBottom="@dimen/x5"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/total_integral"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llDetail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_get_integral" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/integral_detail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_15sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEarn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/x20"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@mipmap/ic_integral_detail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/get_integral"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_15sp" />

    </LinearLayout>

</LinearLayout>